--- a/resources/scss/partials/_banner.scss
+++ b/resources/scss/partials/_banner.scss
@@ -4,14 +4,14 @@
     background-color: $primary;
     color: $light;
     padding: 2rem 6rem;
-    span{
-        font-size: .5rem;
+
+    span {
+        font-size: 0.5rem;
     }
 
     a {
-      text-decoration: none;
-      text-transform: uppercase;
-      color: $light;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: $light;
     }
-
-  }
+}
