--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -1,18 +1,16 @@
 @import "~bootstrap/scss/bootstrap";
+@import "../partials/variables";
 
 header {
     nav {
-        font-family: "Roboto Condensed", sans-serif;
-        font-weight: 700;
-        font-size: 0.8rem;
+        font: 700 0.8rem "Roboto Condensed", sans-serif;
         li {
             a.nav-link {
                 text-transform: uppercase;
                 color: $darker;
-
-                .dropdown-toggle::after {
-                    color: $primary !important;
-                }
+            }
+            .dropdown-toggle::after {
+                color: $primary !important;
             }
         }
 
