--- a/resources/scss/partials/_footer.scss
+++ b/resources/scss/partials/_footer.scss
@@ -2,11 +2,13 @@
 
 #app_footer {
     #footer_top {
-        background-image: url("../img/footer-bg.jpg"),
-            url("../img/dc-logo-bg.png");
-        background-repeat: no-repeat;
-        background-position: right 10% bottom 45%;
-        background-blend-mode: overlay;
+        background-image: url("../img/footer-bg.jpg");
+        .container {
+            background-image: url(http://127.0.0.1:5173/resources/img/dc-logo-bg.png);
+            background-repeat: no-repeat;
+            background-size: auto 139%;
+            background-position: right 2% bottom 50%;
+        }
     }
 
     ul {
@@ -16,12 +18,7 @@
             font-weight: bold;
         }
 
-        p {
-            font-size: 0.5rem;
-        }
-
         a {
-            font-size: 0.7rem;
             text-decoration: none;
             color: $secondary;
         }
@@ -31,6 +28,10 @@
         }
     }
 
+    ul a,
+    p {
+        font-size: 0.6rem;
+    }
     #footer_bottom {
         background-color: $dark;
         min-height: 110px;
